examples/readme_validation/syntax_cases/pass/pass_nested_control.dsl
@name: "语法正例-嵌套流程"
items = [1, 2, 3]

for item in ${items} do
    if ${item} > 1 do
        [打印], 内容: "gt1"
    else
        [打印], 内容: "le1"
    end
end
