examples/readme_validation/syntax_cases/fail/fail_invalid_expression.dsl
@name: "语法负例-非法表达式"
if 1 and and 2 do
    [打印], 内容: "bad expr"
end
